# insured-data-access-service

./: .flaskenv  .gitignore  .pre-commit-config.yaml  alembic.ini  api.yml  app.py  main.py  pyproject.toml
.github/workflows/: package.yml
alembic/: env.py
alembic/versions/: a490856f700b_create_tables.py
docker/: docker-compose.yaml
docs/architecture-decisions/: 0001-record-architecture-decisions.md
src/blueprints/: health_check_blueprint.py  party_blueprint.py
src/config/: config.py  container.py
src/models/: address.py  base.py  party.py  party_history.py
src/repository/: abstract_repository.py  address_repository.py  party_repository.py
src/service/: party_service.py
