[project]
name = "insured-data-access-service"
version = "0.1.0"
description = "CRUD API for insured data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "sqlalchemy>=2.0.43",
    "python-dotenv>=1.1.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "ruff>=0.13.2",
]
