[project]
name = "party-service"
version = "0.1.0"
description = "CRUD Microservice for Party data."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "sqlalchemy>=2.0.43",
    "python-dotenv>=1.1.1",
    "flask-caching>=2.3.1",
    "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.9.1",
    "mypy>=1.18.2",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.13.2",
]

[tool.pytest.ini_options]
testpaths = [
    "tests/integration",
    "tests/unit"
]
addopts = [
    "--import-mode=importlib"
]
